--- a/views/addnews.ejs
+++ b/views/addnews.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header"); -%>
 
-<h1>Compose</h1>
+<h1 style="font-family: 'Josefin Sans', sans-serif;
+">Compose</h1>
 <form action="/addnews" method="post">
     <label for="">Title</label>
     <input class="form-control" type="text" name="title">
