--- a/views/alumniLogin.ejs
+++ b/views/alumniLogin.ejs
@@ -2,18 +2,28 @@
 
 <form action="/alumnihome" method="post">
   <div class="container">
-    <h1>Alumni Login</h1>
+    <h1 style="font-family: 'Josefin Sans', sans-serif;">Alumni Login</h1>
     <p>Enter Login Credentials</p>
     <hr>
 
     <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="username" id="username" required>
+    <input style="  width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;" type="text" placeholder="Enter Username" name="username" id="username" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+    <input style="  width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;" type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
   </div>
-  <button type="submit" class="loginbtn">Submit</button>
+  <button style="width:300px" type="submit" class="loginbtn">Submit</button>
 </form>
 
 
