--- a/views/alumnilist.ejs
+++ b/views/alumnilist.ejs
@@ -4,7 +4,7 @@
     <h1>No Posts Yet</h1>
     <%}else{%>
         <%alumniList.forEach(function(element){%>
-            <h1><%=element.name%></h1> 
+            <h1 style="font-family: 'Josefin Sans', sans-serif;margin-top: 25px;margin-bottom: 0px;"><%=element.name%></h1> 
             <p><%=element.email%> </p>  <br>
             <p><%=element.language%></p><br>
             <p><%=element.profession%></p><br>
