--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,32 +3,31 @@
 
 <div class="buttoncontainer">
     <form class="boxbutton" action="/alumnilist">
-        <button class="boxbutton" type="submit"><h1>Alumni List</h1></button>
+        <button class="boxbutton" type="submit"><h1 style="font-family: 'Josefin Sans', sans-serif;">Alumni List</h1></button>
     </form>
     <form class="boxbutton" action="/addalumni">
-        <button class="boxbutton" type="submit"><h1>Add Alumni</h1></button>
+        <button class="boxbutton" type="submit"><h1 style="font-family: 'Josefin Sans', sans-serif;">Add Alumni</h1></button>
     </form>
 </div>
 
 <br>
+<div class="buttoncontainer">
+    <form class="boxbutton" action="/addnews">
+        <button class="boxbutton" type="submit"><h1 style="font-family: 'Josefin Sans', sans-serif;">Add news to Alumni Portal</h1></button>
+    </form>
+
+</div>
+<br>
 
 <div class="buttoncontainer">
     <form class="boxbutton" action="/sorting">
-        <button class="boxbutton" type="submit"><h1>Search By</h1></button>
+        <button class="boxbutton" type="submit"><h1 style="font-family: 'Josefin Sans', sans-serif;">Search By</h1></button>
     </form>
     <form class="boxbutton" action="/news">
-        <button class="boxbutton" type="submit"><h1>Industrial News</h1></button>
+        <button class="boxbutton" type="submit"><h1 style="font-family: 'Josefin Sans', sans-serif;">Industrial News</h1></button>
     </form>
 </div>
 <hr>
-<div class="buttoncontainer">
-    <form class="boxbutton" action="/addnews">
-        <button class="boxbutton" type="submit"><h1>Add news to Alumni Portal</h1></button>
-    </form>
-    <form class="boxbutton" action="/news">
-        <button class="boxbutton" type="submit"><h1>Industrial News</h1></button>
-    </form>
-</div>
 
 
 <%- include("partials/footer"); -%>
