--- a/views/newslist.ejs
+++ b/views/newslist.ejs
@@ -5,8 +5,10 @@
     <%}else{%>
         <%newsList.forEach(function(element){%>
             <!-- <p><%=element.source.name%></p><br> -->
-            <a rel="stylesheet" href="<%=element.url%>"><h1><%=element.title%></h1></a>
-            <p><h4><%=element.description%></h4> </p>  <br>
+            <a rel="stylesheet" href="<%=element.url%>"><h1 style="font-family: 'Josefin Sans', sans-serif;
+                "><%=element.title%></h1></a>
+            <p style="font-family: 'Josefin Sans', sans-serif;
+            "><%=element.description%> </p>  <br>
             <p><%=element.address%> </p>  <br>
             <p><%=element.phone%> </p>  <br>
             <p><%=element.dob%> </p><br>
