--- a/views/addalumni.ejs
+++ b/views/addalumni.ejs
@@ -4,6 +4,8 @@
 <form action="/addalumni" method="post">
     <label for="">Name</label>
     <input class="form-control" type="text" name="name">
+    <label for="">Year Of Passing</label>
+    <input class="form-control" type="text" name="yop">
     <label for="">Email</label>
     <input class="form-control" type="text" name="email">
     <label for="">Branch</label>
