--- a/views/alumnihome.ejs
+++ b/views/alumnihome.ejs
@@ -14,7 +14,7 @@
 </div>
 <div class="bosscontainer">
     <div class="threeinner">
-        <button class="bossbutton" onclick="window.location.href='/alumnihome'"><h2 style="font-family: 'Josefin Sans', sans-serif;">Home</h2></button>
+        <button class="bossbutton" onclick="window.location.href='/suggestions'"><h2 style="font-family: 'Josefin Sans', sans-serif;">Suggestions Tab</h2></button>
     </div>
     <div class="threeinner">
         <button class="bossbutton" onclick="window.location.href='/alumnihome:request'"><h2 style="font-family: 'Josefin Sans', sans-serif;">Request Profile Update</h2></button>
