--- a/views/request.ejs
+++ b/views/request.ejs
@@ -7,10 +7,20 @@
     <hr>
 
     <label for="title"><b>Request</b></label>
-    <input type="text" placeholder="Enter Request Heading" name="request" id="username" required>
+    <input style="  width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;" type="text" placeholder="Enter Request Heading" name="request" id="username" required>
 
     <label for="psw"><b>Description</b></label>
-    <input type="password" placeholder="Enter Details" name="description" id="description" required>
+    <input style="  width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;" type="password" placeholder="Enter Details" name="description" id="description" required>
 
   </div>
   <button type="submit" class="loginbtn btnone" onclick="window.location.href='/alumnihome'">Submit</button>
