--- a/views/alumniLogin.ejs
+++ b/views/alumniLogin.ejs
@@ -3,7 +3,7 @@
 <form action="/alumnihome" method="post">
   <div class="container">
     <h1 style="font-family: 'Josefin Sans', sans-serif;">Alumni Login</h1>
-    <p>Enter Login Credentials</p>
+    <p>Enter Login Credentials (Enter "test" as username and password)</p>
     <hr>
 
     <label for="username"><b>Username</b></label>
