--- a/views/alumnihome.ejs
+++ b/views/alumnihome.ejs
@@ -24,7 +24,7 @@
     </div>
     <div style="border-radius:25px;display:flex;justify-content:center;align-items:center;width:100%;height:100px;background-color: aliceblue;">
         powered by &nbsp;
-        <a href="https://www.linkedin.com/in/">Subodh Ingole</a>
+        <a href="https://www.linkedin.com/in/subodh-ingole-774873210/">Subodh Ingole</a>
     </div>
 </div>
 <div class="bottomcarousel">
