--- a/views/alumnihome.ejs
+++ b/views/alumnihome.ejs
@@ -6,7 +6,7 @@
         <h1>No Posts Yet</h1>
         <%}else{%>
             <%newsList.forEach(function(element){%>
-                <h1 style="display:inline-block;font-family: 'Josefin Sans', sans-serif;"><%=element.title%></h1> 
+                <h1 style="display:inline-block;font-family: 'Josefin Sans', sans-serif;"><%=element.title%></h1> <br>
                 <p style="display:inline"><%=element.information%> </p>  <br><br>
             <%});%>
         <%}%>
